minor reformating and cleanup